--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,30 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tiptap/extension-color": "^2.1.13",
+    "@tiptap/extension-hard-break": "^2.26.1",
+    "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-horizontal-rule": "^2.26.1",
+    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-strike": "^2.26.1",
+    "@tiptap/extension-subscript": "^2.26.1",
+    "@tiptap/extension-superscript": "^2.26.1",
+    "@tiptap/extension-text-align": "^2.26.1",
+    "@tiptap/extension-text-style": "^2.1.13",
+    "@tiptap/extension-underline": "^2.26.1",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.2",
+    "fabric": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.0.2",
     "sharp": "^0.34.3",
-    "styled-jsx": "^5.1.7"
+    "styled-jsx": "^5.1.7",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
